# bybit-rust-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: get_positions.rs  get_wallet_balance.rs  market_ticker.rs  place_order.rs  websocket_orderbook.rs  websocket_private.rs
src/: auth.rs  client.rs  config.rs  constants.rs  error.rs  lib.rs  utils.rs
src/api/: account.rs  asset.rs  market.rs  mod.rs  position.rs  trade.rs
src/models/: account.rs  asset.rs  common.rs  market.rs  mod.rs  position.rs  trade.rs
src/websocket/: client.rs  mod.rs  models.rs
