[package]
name = "bybit-api"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "A Rust SDK for the Bybit V5 API - async, type-safe, zero-panic"
repository = "https://github.com/bybit-exchange/bybit-rust-api"
documentation = "https://docs.rs/bybit-api"
readme = "README.md"
keywords = ["bybit", "cryptocurrency", "trading", "api", "async"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal for precise financial calculations
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Crypto for HMAC signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
log = "0.4.29"
regex = "1.12.3"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
